# spotify-api-project

./: .coverage  pyproject.toml
migrations/: env.py
migrations/versions/: 083efd68e55e_create_users_table.py  cacee86bc015_exercicio_02_aula_04.py
spotify_api/: app.py  auth.py  auth_spotify.py  database.py  main.py  models.py  schemas.py  security.py  settings.py
spotify_api/routers/: auth.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_users.py
