[project]
name = "spotify-api"
version = "0.1.0"
description = ""
authors = [
    {name = "yedsrjr",email = "edsonr065@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "requests (>=2.32.3,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "fastapi[standard] (>=0.115.11,<0.116.0)",
]

[tool.poetry]
packages = [{include = "spotify_api", from = "src"}]


[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
ruff = "^0.11.1"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 95
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev spotify_api/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=spotify_api -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
